refatorando parte das exceptions